# warnings

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README.md
src/warnings/: all.h  arc-bridge-casts-disallowed-in-nonarc.h  arc-repeated-use-of-weak.h  assign-base-inaccessible.h  assign-could-not-be-generated.h  automatic-inline.h  behavior-change.h  bool-conversion.h  c++11-extensions.h  c++98-compat-pedantic.h  c++98-compat.h  cast-align.h  catch-semantic-changed.h  compatibility-c++98.h  compiler.h  conditional-uninitialized.h  constant-conditional.h  constant-conversion.h  conversion-loss.h  conversion-sign-extended.h  conversion.h  copy-ctor-could-not-be-generated.h  deprecated-declarations.h  deprecated-implementations.h  deprecated-objc-isa-usage.h  deprecated-register.h  deprecated.h  dflt-ctor-base-inaccessible.h  dflt-ctor-could-not-be-generated.h  digraphs-not-supported.h  disabled-macro-expansion.h  documentation-unknown-command.h  documentation.h  duplicate-method-match.h  empty-body.h  enum-conversion.h  exit-time-destructors.h  explicit-ownership-type.h  extra-semi.h  force-not-inlined.h  (+70 more)
test/: all.cc  assign-base-inaccessible.cc  assign-could-not-be-generated.cc  automatic-inline.cc  main.cc
